[package]
name = "rustrast"
version = "0.2.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
windows = { version = "0.48.0", features = ["Win32_Foundation", "Win32_System_Performance", "Win32_System_SystemInformation", "Win32_System_LibraryLoader", "Win32_UI_WindowsAndMessaging", "Win32_Graphics_Gdi"] }

[build-dependencies]
winres = "0.1.12"
